--- a/session 29/templates/admin/base.html
+++ b/session 29/templates/admin/base.html
@@ -35,7 +35,7 @@
       <header id="header">
         <div id="branding">
         {% block branding %}{% endblock %}
-        skfmkldfmksdrfrf
+        I am after branding
         </div>
         {% block usertools %}
         {% if has_permission %}
